# auto-rob2

./: .gitignore  .ignore  ARCHITECTURE.md  README.md  benchmark.py  main.py  pyproject.toml
analysis/: categorize_failures.py
data/references/: adverse_events.csv  overall_survival.csv  progression_free_survival.csv
docs/: ARCHITECTURE.md  DIAGNOSTIC.md
docs/plans/: 2026-05-11-rob2-methodology-rule-cards.md  2026-05-16-docling-langchain-rag-refactor.md  2026-05-19-maintainability-refactor.md  2026-05-22-pipeline-timing-instrumentation.md  2026-05-22-supplement-enriched-pipeline.md
docs/specs/: 2026-05-10-d2-d4-prompt-accuracy-fixes.md  2026-05-10-domain-evidence-priority.md  (+7 more)
rob2-assessor/: SKILL.md
rob2_pipeline/: __init__.py  benchmark.py  cache.py  config.py  constants.py  debug.py  docling_utils.py  graph.py  io.py  llm_client.py  models.py  pdf_ingestion.py  pipeline.py  prompt_registry.py  prompts.py  rag.py  rag_queries.py  registration_api.py  state.py  state_factory.py  trace.py  types.py  xml_parser.py
tests/: test_benchmark.py  test_cache.py  test_categorize_failures.py  test_domain_evidence_priority.py  test_evidence_packet_prompting.py  test_evidence_packets.py  test_graph.py  test_io.py  test_judges.py  test_methodology.py  test_outcome_resolver.py  test_pdf_ingestion.py  test_pipeline.py  test_prompts.py  test_rag.py  test_rag_queries.py  test_rag_retrieval_node.py  test_rate_limiter.py  test_registration_api.py  test_supplements.py  test_trace.py  test_trial_facts.py  test_types.py  test_verification.py  test_xml_parser.py
(+75 files in other folders)
